Added proper integration between attestations & showcase code

--- a/showcase/src/main/res/layout/rooting_activity.xml
+++ b/showcase/src/main/res/layout/rooting_activity.xml
@@ -19,19 +19,32 @@
             app:layout_constraintGuide_percent="0.5" />
 
         <TextView
-            android:id="@+id/debug_text"
+            android:id="@+id/debug_text_1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:text="2"
+            android:id="@+id/debug_text_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@+id/debug_text_1"
+            app:layout_constraintStart_toStartOf="@id/debug_text_1"
+            app:layout_constraintTop_toBottomOf="@+id/debug_text_1" />
 
         <ProgressBar
-            android:id="@+id/progressBar"
+            android:id="@+id/progress_bar"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/debug_text"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/debug_text"
-            app:layout_constraintTop_toTopOf="@+id/debug_text" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
