Written docs for integrity and updated showcase accordingly

--- a/showcase/src/main/res/layout/integrity_activity.xml
+++ b/showcase/src/main/res/layout/integrity_activity.xml
@@ -21,7 +21,10 @@
         <TextView
             android:id="@+id/debug_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
             android:id="@+id/progressBar"
