--- a/showcase/src/main/res/layout/rooting_activity.xml
+++ b/showcase/src/main/res/layout/rooting_activity.xml
@@ -24,17 +24,17 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="1" />
 
         <TextView
-            android:text="2"
             android:id="@+id/debug_text_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="@+id/debug_text_1"
             app:layout_constraintStart_toStartOf="@id/debug_text_1"
-            app:layout_constraintTop_toBottomOf="@+id/debug_text_1" />
+            app:layout_constraintTop_toBottomOf="@+id/debug_text_1"
+            tools:text="2" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
